personal project push may 24

--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/about.ejs
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/about.ejs
@@ -3,6 +3,9 @@
 <%- include('../partials/navigation') -%> 
 
 <div class="homepage-flex">
+    
+    <h1>This Is The About Page</h1>
+
     <div>This is the photo of me.</div>
     <div>This is information about me</div>
     <div>This is my LinkedIn information</div>
