--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/admin.ejs
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/admin.ejs
@@ -3,8 +3,16 @@
 <%- include('../partials/navigation') -%> 
 
 <div class="homepage-flex">
-    <div>This is the home page.</div>
+    <h1>This Is The Admin Page</h1>
+
+    <div>This is the admin page.</div>
     <div>This will contain the table of all the current Food Fridges listed.</div>
+    
 </div>
+
+
+  </form>
+  </main>
+  
 
 <%- include('../partials/footer') -%> 
