--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/index.ejs
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/index.ejs
@@ -3,6 +3,9 @@
 <%- include('../partials/navigation') -%> 
 
     <div class="homepage-flex">
+        
+        <h1>This Is The Home Page</h1>
+
         <div>This is the home page.</div>
         <div>This is the list of locations.</div>
         <div>This is the map.</div>
