--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/search.ejs
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/pages/search.ejs
@@ -3,7 +3,9 @@
 <%- include('../partials/navigation') -%> 
 
 <div class="homepage-flex">
-    <div>This is the home page.</div>
+    
+    <h1>This Is The Search Page</h1>
+
     <div>This is the list of locations.</div>
     <div>This will display the list of food fridges.</div>
     <div>You can also search here.</div>
