--- a/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/partials/navigation.ejs
+++ b/Desktop/CodeSquad2022/ProjectsFolder/Boston Food Fridge Website Project/views/partials/navigation.ejs
@@ -4,11 +4,10 @@
         </a>
         <nav class="navbar">
             <ul class="navbar-list">
-                <li><a href="#index">Home</a></li>
-                <li><a href="#login">Login</a></li>
-                <li><a href="#search">Search</a></li>
-                <li><a href="#contact">Contact Me</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/admin">Admin</a></li>
+                <li><a href="/search">Search</a></li>
+                <li><a href="/about">About Us</a></li>
                 <li><input type="text" placeholder="search map locations 🔎 " class="searchbar"></li>
             </ul>
         </nav>
